[workspace]
resolver = "2"
members = [
    "air",
    "baby-bear",
    "blake3",
    "bn254-fr",
    "challenger",
    "circle",
    "commit",
    "dft",
    "field",
    "field-testing",
    "fri",
    "goldilocks",
    "interpolation",
    "koala-bear",
    "keccak",
    "keccak-air",
    "lde",
    "matrix",
    "merkle-tree",
    "maybe-rayon",
    "mersenne-31",
    "monolith",
    "poseidon",
    "poseidon2",
    "rescue",
    "symmetric",
    "util",
    "uni-stark",
]

[workspace.dependencies]
tracing = { git = "https://github.com/koute/tracing", branch = "v0.1_tracing_log_no_std", default-features = false }
