[workspace]
resolver = "2"
members = [
    "air",
    "baby-bear",
    "blake3",
    "bn254-fr",
    "challenger",
    "circle",
    "commit",
    "dft",
    "field",
    "field-testing",
    "fri",
    "goldilocks",
    "interpolation",
    "koala-bear",
    "keccak",
    "keccak-air",
    "lde",
    "matrix",
    "merkle-tree",
    "maybe-rayon",
    "mersenne-31",
    "monolith",
    "poseidon",
    "poseidon2",
    "rescue",
    "symmetric",
    "util",
    "uni-stark",
]

[workspace.dependencies]
rand = { version = "0.8.5", default-features = false }
tracing = { git = "https://github.com/koute/tracing", branch = "v0.1_tracing_log_no_std", default-features = false }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"]}
serde = { version = "1.0.207", default-features = false }
