[package]
name = "p3-matrix"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = { path = "../field" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-util = { path = "../util" }
itertools = "0.12.0"
rand = { workspace = true }
serde = { version = "1.0", default-features = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
p3-mersenne-31 = { path = "../mersenne-31" }

[[bench]]
name = "transpose_benchmark"
path = "benches/transpose_benchmark.rs"
harness = false
