[package]
name = "p3-rescue"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gcd = "2.3.0"
itertools = { workspace = true }
modinverse = "0.1.1"
num = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-integer = { version = "0.1.45", default_features = false }
p3-field = { path = "../field" }
p3-mds = { path = "../mds" }
p3-symmetric = { path = "../symmetric" }
p3-util = { path = "../util" }
rand = { workspace = true }
sha3 = "0.10.8"

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-goldilocks = { path = "../goldilocks" }
p3-mersenne-31 = { path = "../mersenne-31" }
criterion = "0.5.1"

[[bench]]
name = "rescue"
harness = false
